Fix alignment for event date + allow wrapping

--- a/scss/topic-cards.scss
+++ b/scss/topic-cards.scss
@@ -114,6 +114,7 @@
     font-weight: 500;
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
 
     .title {
       padding: 0;
@@ -272,6 +273,12 @@
   .link-top-line .event-date {
     margin-left: 0.5em;
     font-size: var(--font-down-3);
+    white-space: nowrap;
+  }
+
+  .link-top-line .event-date-container {
+    display: inline-flex;
+    position: relative;
   }
 
   .topic-list-data {
@@ -645,9 +652,4 @@ body.user-messages-page {
       }
     }
   }
-}
-
-.event-date-container {
-  display: inline-flex;
-  position: relative;
 }
